
[package]
name = "arx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cursive = {version = "0.17.0" , features=["toml" , "blt-backend"]}
cursive-tabs = "0.7.0"
regex = "1.5.5"
[dependencies.cursive]
version = "0.17.0"
default-features = false
features = ["toml"]

[features]
default = ["cursive/termion-backend"]
wingui = ["cursive/blt-backend"]
wincon = ["cursive/crossterm-backend"]
ncurses-backend = ["cursive/ncurses-backend"]
pancurses-backend = ["cursive/pancurses-backend"]
crossterm-backend = ["cursive/crossterm-backend"]
